# qiskit-alt

./: .dockerignore  .gitignore  Development.md  Dockerfile  Install_Julia.md  MANIFEST.in  Manifest.toml  Motivations.md  Project.toml  README.md  _setup.py  dev_new.md  init_test.py  install_notes.txt  python_julia_interface_dev_notes.txt  requirements-dev.txt  requirements.txt  requirements_in_project.txt  run_init_tests.sh  setup.cfg  setup.py
bench/: fermionic_alt_time.py  fermionic_nature_time.py  from_matrix_alt.py  from_matrix_nature.py  from_matrix_quantum_info.py  h2_hamiltonian_alt_time.py  h2_hamiltonian_nature_time.py  jordan_wigner_alt_time.py  jordan_wigner_nature_time.py  pauli_from_list_alt.py  pauli_from_list_qinfo.py  run_all_bench.py  run_only_alt.py
demos/: Comparing-qiskit_alt-and-qiskit_nature-VQE-output.ipynb  qiskit_alt_demo.ipynb  qiskit_alt_demo_jc.ipynb  qiskit_alt_vqe_demo.ipynb
docker_tests/: 0Dockerfile-inst  0Notes-docker.txt  Dockerfile  Dockerfile0  Dockerfile1  Dockerfile2  Dockerfile3  Dockerfile4  Dockerfile5  README-docker_tests.md  build_containers.sh  run_dockerfile.py  run_dockerfile.sh
examples/: h2_hamiltonian_alt.py  jw_example.jl  jw_example.py  nature_qubit_hamiltonian_ex.py  qubit_hamiltonian_ex.py  trial_mol.jl
julia/: electronic_structure.jl
julia_src/: electronic_structure.jl
qiskit_alt/: Project.toml  __init__.py  _julia_project.py  _version.py  activate_julia.py  convert_types.py  electronic_structure.py  julia_path.py  pauli_operators.py  qiskit_alt_julia_project.py
qiskit_alt/julia_project/: __init__.py  activate_project.py
qiskit_alt/sys_image/: Project.toml  compile_exercise_script.jl  compile_julia_project.jl
src/qiskit_alt/: Project.toml  __init__.py  _julia_project.py  e_struct_julia.py  e_struct_python.py  electronic_structure.jl  electronic_structure.py  es_juliacall.jl  julia_project.py  juliacall_util.jl  pauli_operators.py
src/qiskit_alt/sys_image/: Project.toml  compile_exercise_script.jl  packages.jl
sys_image/: Artifacts.toml  Manifest.toml  Project.toml  compile_julia_project.jl  compile_qiskit_alt.jl  compile_quantum.jl  iop_h2.jld2
test/: basic_test.py
test_juliacall/: basic_juliacall_test.py
