[metadata]
name = qiskit_alt
version = 0.1.2
description = Julia backend for Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Framework :: Django
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
Home = http://github.com/Qiskit-Extensions/qiskit-alt


[options]
zip_safe = False
packages = find:
package_dir =
    =src

install_requires =
       pyscf ~= 2.0
       julia
       juliacall
       qiskit-terra ~= 0.19
       qiskit-nature ~= 0.2
       julia_project >= 0.1.11


[options.packages.find]
where = src

[tool:pytest]
norecursedirs = .* scripts build dist

# https://github.com/pytest-dev/pytest/issues/1445
[easy_install]
zip_ok = 0

[options.package_data]
qiskit_alt = sys_image/packages.jl
             sys_image/Project.toml
             sys_image/compile_exercise_script.jl
             Project.toml
             electronic_structure.jl
