[metadata]
name = qiskit_alt
version = attr: qiskit_alt.__version__
description = Julia backend for Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache
classifiers =
    Framework :: Django
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
project_urls =
home = http://github.com/Qiskit-Extensions/qiskit-alt


[options]
zip_safe = False
packages = find:
package_dir =
    =src


# ipywidgets is pretty heavy, and only used for version table in notebooks
install_requires =
       pyscf >= 2.0
       julia
       juliacall
       qiskit-terra >= 0.19
       qiskit-nature >= 0.2
       qiskit-ignis
       matplotlib
       julia_project >= 0.1.26
       ipywidgets


[options.packages.find]
where = src

[tool:pytest]
norecursedirs = .* scripts build dist

# https://github.com/pytest-dev/pytest/issues/1445
[easy_install]
zip_ok = 0

[options.package_data]
qiskit_alt = sys_image/packages.jl
             sys_image/Project.toml
             sys_image/compile_exercise_script.jl
             Project.toml
             electronic_structure.jl
             es_juliacall.jl
             juliacall_util.jl
