[metadata]
name = qiskit_alt
version = attr: qiskit_alt.__version__
description = Julia backend for Qiskit
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
url = http://github.com/Qiskit-Extensions/qiskit-alt
project_urls =
    Bug Tracker = https://github.com/Qiskit-Extensions/qiskit-alt/issues
    Source Code = https://github.com/Qiskit-Extensions/qiskit-alt


[options]
zip_safe = False
packages = find:
package_dir =
    =src


# ipywidgets is pretty heavy, and only used for version table in notebooks
install_requires =
       pyscf >= 2.0
       julia
       juliacall
       qiskit-terra >= 0.19
       qiskit-nature >= 0.2
       julia_project >= 0.1.26
       ipywidgets


[options.packages.find]
where = src

[tool:pytest]
norecursedirs = .* scripts build dist

# https://github.com/pytest-dev/pytest/issues/1445
[easy_install]
zip_ok = 0

[options.package_data]
qiskit_alt = sys_image/packages.jl
             sys_image/Project.toml
             sys_image/compile_exercise_script.jl
             Project.toml
             electronic_structure.jl
             es_juliacall.jl
             juliacall_util.jl
